Added DG Services section

--- a/index.html
+++ b/index.html
@@ -313,95 +313,287 @@
           <div class="portfolio-gallery-inner-wrapper">
             <div class="portfolio-column column-1">
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-1.jpg" alt="Kanya Dan Ceremony">
+                <img
+                  class="gallery-img"
+                  src="./assets/media/portfolio/masonary/gallery-itm-1.jpg"
+                  alt="Kanya Dan Ceremony"
+                />
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-4.jpg" alt="Taj Mahal from Window">
+                <img
+                  class="gallery-img"
+                  src="./assets/media/portfolio/masonary/gallery-itm-4.jpg"
+                  alt="Taj Mahal from Window"
+                />
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-7.jpg" alt="Rani Vav">
+                <img
+                  class="gallery-img"
+                  src="./assets/media/portfolio/masonary/gallery-itm-7.jpg"
+                  alt="Rani Vav"
+                />
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-10.jpg" alt="Esso">
+                <img
+                  class="gallery-img"
+                  src="./assets/media/portfolio/masonary/gallery-itm-10.jpg"
+                  alt="Esso"
+                />
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-13.jpg" alt="Indian Train">
+                <img
+                  class="gallery-img"
+                  src="./assets/media/portfolio/masonary/gallery-itm-13.jpg"
+                  alt="Indian Train"
+                />
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-16.jpg" alt="Indian lady with Water Pot">
+                <img
+                  class="gallery-img"
+                  src="./assets/media/portfolio/masonary/gallery-itm-16.jpg"
+                  alt="Indian lady with Water Pot"
+                />
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-19.jpg" alt="Random Bike">
+                <img
+                  class="gallery-img"
+                  src="./assets/media/portfolio/masonary/gallery-itm-19.jpg"
+                  alt="Random Bike"
+                />
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-22.jpg" alt="Drawing Room">
+                <img
+                  class="gallery-img"
+                  src="./assets/media/portfolio/masonary/gallery-itm-22.jpg"
+                  alt="Drawing Room"
+                />
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-25.jpg" alt="Wedding Ceremony">
+                <img
+                  class="gallery-img"
+                  src="./assets/media/portfolio/masonary/gallery-itm-25.jpg"
+                  alt="Wedding Ceremony"
+                />
               </div>
             </div>
             <div class="portfolio-column column-2">
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-2.jpg" alt="Boat in water">
+                <img
+                  class="gallery-img"
+                  src="./assets/media/portfolio/masonary/gallery-itm-2.jpg"
+                  alt="Boat in water"
+                />
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-5.jpg" alt="Red tree">
+                <img
+                  class="gallery-img"
+                  src="./assets/media/portfolio/masonary/gallery-itm-5.jpg"
+                  alt="Red tree"
+                />
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-8.jpg" alt="Haldi Ceremony">
+                <img
+                  class="gallery-img"
+                  src="./assets/media/portfolio/masonary/gallery-itm-8.jpg"
+                  alt="Haldi Ceremony"
+                />
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-11.jpg" alt="Girl in Formal wear">
+                <img
+                  class="gallery-img"
+                  src="./assets/media/portfolio/masonary/gallery-itm-11.jpg"
+                  alt="Girl in Formal wear"
+                />
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-14.jpg" alt="Wedding Hand Shake Ceremony">
+                <img
+                  class="gallery-img"
+                  src="./assets/media/portfolio/masonary/gallery-itm-14.jpg"
+                  alt="Wedding Hand Shake Ceremony"
+                />
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-17.jpg" alt="Sun Temple - Modhera">
+                <img
+                  class="gallery-img"
+                  src="./assets/media/portfolio/masonary/gallery-itm-17.jpg"
+                  alt="Sun Temple - Modhera"
+                />
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-20.jpg" alt="Taj Mahal">
+                <img
+                  class="gallery-img"
+                  src="./assets/media/portfolio/masonary/gallery-itm-20.jpg"
+                  alt="Taj Mahal"
+                />
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-23.jpg" alt="Buildings">
+                <img
+                  class="gallery-img"
+                  src="./assets/media/portfolio/masonary/gallery-itm-23.jpg"
+                  alt="Buildings"
+                />
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-26.jpg" alt="Wedding Ceremony">
+                <img
+                  class="gallery-img"
+                  src="./assets/media/portfolio/masonary/gallery-itm-26.jpg"
+                  alt="Wedding Ceremony"
+                />
               </div>
             </div>
             <div class="portfolio-column column-3">
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-3.jpg" alt="Taj Mahal">
+                <img
+                  class="gallery-img"
+                  src="./assets/media/portfolio/masonary/gallery-itm-3.jpg"
+                  alt="Taj Mahal"
+                />
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-6.jpg" alt="Ring Ceremony">
+                <img
+                  class="gallery-img"
+                  src="./assets/media/portfolio/masonary/gallery-itm-6.jpg"
+                  alt="Ring Ceremony"
+                />
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-9.jpg" alt="Folk Dance">
+                <img
+                  class="gallery-img"
+                  src="./assets/media/portfolio/masonary/gallery-itm-9.jpg"
+                  alt="Folk Dance"
+                />
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-12.jpg" alt="Peacock">
+                <img
+                  class="gallery-img"
+                  src="./assets/media/portfolio/masonary/gallery-itm-12.jpg"
+                  alt="Peacock"
+                />
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-15.jpg" alt="Space Craft">
+                <img
+                  class="gallery-img"
+                  src="./assets/media/portfolio/masonary/gallery-itm-15.jpg"
+                  alt="Space Craft"
+                />
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-18.jpg" alt="Wedding Ceremony">
+                <img
+                  class="gallery-img"
+                  src="./assets/media/portfolio/masonary/gallery-itm-18.jpg"
+                  alt="Wedding Ceremony"
+                />
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-21.jpg" alt="Holi - Festival of colors">
+                <img
+                  class="gallery-img"
+                  src="./assets/media/portfolio/masonary/gallery-itm-21.jpg"
+                  alt="Holi - Festival of colors"
+                />
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-24.jpg" alt="Girl in Saree">
+                <img
+                  class="gallery-img"
+                  src="./assets/media/portfolio/masonary/gallery-itm-24.jpg"
+                  alt="Girl in Saree"
+                />
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-27.jpg" alt="Wedding Venue">
+                <img
+                  class="gallery-img"
+                  src="./assets/media/portfolio/masonary/gallery-itm-27.jpg"
+                  alt="Wedding Venue"
+                />
               </div>
             </div>
           </div>
         </div>
       </section>
       <!-- Portfolio Section ends here-->
+
+      <!-- Services Section -->
+      <section class="services-section-wrap">
+        <div class="services-section container">
+          <div class="heading-area dg-secondary-text">
+            <p data-aos="fade-right" class="section-label secondary-label">
+              DG Services
+            </p>
+
+            <h3 data-aos="fade-left" class="text-center">
+              What does Dinesh provide?
+            </h3>
+          </div>
+
+          <div class="services-cards">
+            <div
+              class="service-card"
+              data-aos="zoom-in"
+              id="photography-service"
+              style="
+                background-image: url('./assets/media/services/photography-service.jpg');
+              "
+            >
+              <div class="gradient-overlay">
+                <div class="content">
+                  <h4 class="service-title">Photography</h4>
+                  <p class="service-desc">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Repudiandae numquam eos minus dignissimos molestias quae,
+                    praesentium blanditiis nobis laudantium incidunt temporibus,
+                    reiciendis quas inventore sunt. Voluptas quibusdam rem
+                    cumque recusandae?
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div
+              class="service-card"
+              data-aos="zoom-in"
+              id="video-graphy-service"
+              style="
+                background-image: url('./assets/media/services/video-graphy-service.jpg');
+              "
+            >
+              <div class="gradient-overlay">
+                <div class="content">
+                  <h4 class="service-title">Videography</h4>
+                  <p class="service-desc">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Repudiandae numquam eos minus dignissimos molestias quae,
+                    praesentium blanditiis nobis laudantium incidunt temporibus,
+                    reiciendis quas inventore sunt. Voluptas quibusdam rem
+                    cumque recusandae?
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div
+              class="service-card"
+              data-aos="zoom-in"
+              id="editing-service"
+              style="
+                background-image: url('./assets/media/services/editing-service.jpg');
+              "
+            >
+              <div class="gradient-overlay">
+                <div class="content">
+                  <h4 class="service-title">Editing</h4>
+                  <p class="service-desc">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Repudiandae numquam eos minus dignissimos molestias quae,
+                    praesentium blanditiis nobis laudantium incidunt temporibus,
+                    reiciendis quas inventore sunt. Voluptas quibusdam rem
+                    cumque recusandae?
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Services Section ends here -->
     </main>
 
     <!-- Footer -->
