Updated the corresponding content in the Services

--- a/index.html
+++ b/index.html
@@ -537,11 +537,11 @@
                 <div class="content">
                   <h4 class="service-title">Photography</h4>
                   <p class="service-desc">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Repudiandae numquam eos minus dignissimos molestias quae,
-                    praesentium blanditiis nobis laudantium incidunt temporibus,
-                    reiciendis quas inventore sunt. Voluptas quibusdam rem
-                    cumque recusandae?
+                    Discover the art of storytelling through images with DG
+                    professional photography services. From capturing precious
+                    moments at weddings to showcasing the essence of your brand
+                    through corporate photography, let DG create your memories
+                    and visions with skill and passion.
                   </p>
                 </div>
               </div>
@@ -559,11 +559,11 @@
                 <div class="content">
                   <h4 class="service-title">Videography</h4>
                   <p class="service-desc">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Repudiandae numquam eos minus dignissimos molestias quae,
-                    praesentium blanditiis nobis laudantium incidunt temporibus,
-                    reiciendis quas inventore sunt. Voluptas quibusdam rem
-                    cumque recusandae?
+                    Experience the power of visual storytelling with DG
+                    Videography services. Whether you're looking to document
+                    special moments, create promotional videos for your
+                    business, or produce engaging content for your audience, DG
+                    is dedicated to bringing your stories to life.
                   </p>
                 </div>
               </div>
@@ -581,11 +581,10 @@
                 <div class="content">
                   <h4 class="service-title">Editing</h4>
                   <p class="service-desc">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Repudiandae numquam eos minus dignissimos molestias quae,
-                    praesentium blanditiis nobis laudantium incidunt temporibus,
-                    reiciendis quas inventore sunt. Voluptas quibusdam rem
-                    cumque recusandae?
+                    Elevate your content with DG editing services. From refining
+                    raw footage to enhancing the colors and mood of your photos,
+                    transform your visuals into stunning masterpieces. Let DG
+                    polish your content and make it shine.
                   </p>
                 </div>
               </div>
