Added rounded banner section with official site image

--- a/index.html
+++ b/index.html
@@ -593,6 +593,21 @@
         </div>
       </section>
       <!-- Services Section ends here -->
+
+      <!-- Rounded Banner Section -->
+      <section class="rounded-banner-section-wrap">
+        <div class="rounded-banner-section container">
+          <div class="rounded-banner">
+            <img
+              src="./assets/media/rounded.jpg"
+              alt="Image Banner"
+              class="banner"
+              id="bannerImage"
+            />
+          </div>
+        </div>
+      </section>
+      <!-- Rounded Banner Section ends here -->
     </main>
 
     <!-- Footer -->
