Created testimonial section and designed it and initialized slick slider for it

--- a/index.html
+++ b/index.html
@@ -608,6 +608,120 @@
         </div>
       </section>
       <!-- Rounded Banner Section ends here -->
+
+      <!-- Testimonial Section -->
+      <section id="testimonial" class="testimonial-section-wrap">
+        <div
+          class="testimonial-section"
+          style="background-image: url('./assets/media/testimonial.jpg')"
+        >
+          <div class="overlay-wrapper">
+            <div class="container">
+              <div class="testimonial-inner-wrap">
+                <div class="content-area">
+                  <p
+                    data-aos="fade-right"
+                    class="section-label secondary-label"
+                  >
+                    Success Stories
+                  </p>
+
+                  <h3 data-aos="fade-left">
+                    Celebrating appreciative feedback<br />from satisfied
+                    clients.
+                  </h3>
+                </div>
+                <div class="testimonial-area dg-secondary-text">
+                  <div class="testimonial-itm">
+                    <div class="feedback">
+                      <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing
+                        elit. Recusandae qui cumque necessitatibus molestias a
+                        incidunt, provident quaerat tempore dignissimos illo
+                        fuga neque reiciendis inventore, commodi labore aliquam
+                        ducimus esse itaque.
+                      </p>
+                    </div>
+                    <div class="satisfied-client">
+                      <img
+                        class="client-profile"
+                        src="./assets/media/testimonial/aditi-talwar.jpg"
+                        alt="Aditi Talwar"
+                      />
+
+                      <h6 class="client-name">Aditi Talwar</h6>
+                    </div>
+                  </div>
+
+                  <div class="testimonial-itm">
+                    <div class="feedback">
+                      <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing
+                        elit. Recusandae qui cumque necessitatibus molestias a
+                        incidunt, provident quaerat tempore dignissimos illo
+                        fuga neque reiciendis inventore, commodi labore aliquam
+                        ducimus esse itaque.
+                      </p>
+                    </div>
+                    <div class="satisfied-client">
+                      <img
+                        class="client-profile"
+                        src="./assets/media/testimonial/nitish-guglani.jpg"
+                        alt="Nitish Guglani"
+                      />
+
+                      <h6 class="client-name">Nitish Guglani</h6>
+                    </div>
+                  </div>
+
+                  <div class="testimonial-itm">
+                    <div class="feedback">
+                      <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing
+                        elit. Recusandae qui cumque necessitatibus molestias a
+                        incidunt, provident quaerat tempore dignissimos illo
+                        fuga neque reiciendis inventore, commodi labore aliquam
+                        ducimus esse itaque.
+                      </p>
+                    </div>
+                    <div class="satisfied-client">
+                      <img
+                        class="client-profile"
+                        src="./assets/media/testimonial/pruthvisinh.jpg"
+                        alt="Pruthvisinh"
+                      />
+
+                      <h6 class="client-name">Pruthvisinh</h6>
+                    </div>
+                  </div>
+
+                  <div class="testimonial-itm">
+                    <div class="feedback">
+                      <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing
+                        elit. Recusandae qui cumque necessitatibus molestias a
+                        incidunt, provident quaerat tempore dignissimos illo
+                        fuga neque reiciendis inventore, commodi labore aliquam
+                        ducimus esse itaque.
+                      </p>
+                    </div>
+                    <div class="satisfied-client">
+                      <img
+                        class="client-profile"
+                        src="./assets/media/testimonial/sajal-gandhi.jpg"
+                        alt="Sajal Gandhi"
+                      />
+
+                      <h6 class="client-name">Sajal Gandhi</h6>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Testimonial Section ends here -->
     </main>
 
     <!-- Footer -->
