Replaced the feedback lorem ipsum content into generated feedback

--- a/index.html
+++ b/index.html
@@ -635,11 +635,9 @@
                   <div class="testimonial-itm">
                     <div class="feedback">
                       <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing
-                        elit. Recusandae qui cumque necessitatibus molestias a
-                        incidunt, provident quaerat tempore dignissimos illo
-                        fuga neque reiciendis inventore, commodi labore aliquam
-                        ducimus esse itaque.
+                        Working with Dinesh Gahlot was an absolute pleasure. His
+                        attention to detail and creative vision truly brought
+                        our moments to life. Highly recommended!
                       </p>
                     </div>
                     <div class="satisfied-client">
@@ -656,11 +654,9 @@
                   <div class="testimonial-itm">
                     <div class="feedback">
                       <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing
-                        elit. Recusandae qui cumque necessitatibus molestias a
-                        incidunt, provident quaerat tempore dignissimos illo
-                        fuga neque reiciendis inventore, commodi labore aliquam
-                        ducimus esse itaque.
+                        Dinesh's professionalism and expertise exceeded our
+                        expectations. He captured every emotion beautifully,
+                        turning our memories into timeless treasures.
                       </p>
                     </div>
                     <div class="satisfied-client">
@@ -677,11 +673,9 @@
                   <div class="testimonial-itm">
                     <div class="feedback">
                       <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing
-                        elit. Recusandae qui cumque necessitatibus molestias a
-                        incidunt, provident quaerat tempore dignissimos illo
-                        fuga neque reiciendis inventore, commodi labore aliquam
-                        ducimus esse itaque.
+                        I couldn't be happier with the photos Dinesh captured.
+                        His passion for his craft shines through in every shot.
+                        Thank you for making our day unforgettable!
                       </p>
                     </div>
                     <div class="satisfied-client">
@@ -698,11 +692,9 @@
                   <div class="testimonial-itm">
                     <div class="feedback">
                       <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing
-                        elit. Recusandae qui cumque necessitatibus molestias a
-                        incidunt, provident quaerat tempore dignissimos illo
-                        fuga neque reiciendis inventore, commodi labore aliquam
-                        ducimus esse itaque.
+                        Dinesh's talent and dedication are unmatched. He has a
+                        knack for capturing the essence of every moment, leaving
+                        us with memories we'll cherish forever.
                       </p>
                     </div>
                     <div class="satisfied-client">
