Developed the creative CTA structure for Contact DG section with markup,styling and script

--- a/index.html
+++ b/index.html
@@ -714,6 +714,23 @@
         </div>
       </section>
       <!-- Testimonial Section ends here -->
+
+      <!-- Contact CTA Section -->
+      <section id="contact" class="contact-section-wrap">
+        <div class="contact-section">
+          <div class="contact-cta-inner-wrap container">
+            <a data-aos="zoom-in" href="mailto:aakash.sisodiya2709@gmail.com" class="contact-cta-btn">
+              <span class="cta-text">Contact DG</span>
+              <img
+                class="icon"
+                src="./assets/media/icons/url-yellow.svg"
+                alt="Click me"
+              />
+            </a>
+          </div>
+        </div>
+      </section>
+      <!-- Contact CTA Section ends here -->
     </main>
 
     <!-- Footer -->
