Added full image slider section and initialized the slider with the slick slider

--- a/index.html
+++ b/index.html
@@ -731,6 +731,51 @@
         </div>
       </section>
       <!-- Contact CTA Section ends here -->
+
+      <!-- Image Slider section -->
+      <section class="image-slider-section-wrap">
+        <div class="image-slider-section">
+          <div class="image-slider-inner-wrap">
+            <div class="img-slider-itm">
+              <img class="slider-img" src="./assets/media/portfolio/masonary/gallery-itm-1.jpg" alt="">
+            </div>
+            <div class="img-slider-itm">
+              <img class="slider-img" src="./assets/media/portfolio/masonary/gallery-itm-2.jpg" alt="">
+            </div>
+            <div class="img-slider-itm">
+              <img class="slider-img" src="./assets/media/portfolio/masonary/gallery-itm-3.jpg" alt="">
+            </div>
+            <div class="img-slider-itm">
+              <img class="slider-img" src="./assets/media/portfolio/masonary/gallery-itm-4.jpg" alt="">
+            </div>
+            <div class="img-slider-itm">
+              <img class="slider-img" src="./assets/media/portfolio/masonary/gallery-itm-5.jpg" alt="">
+            </div>
+            <div class="img-slider-itm">
+              <img class="slider-img" src="./assets/media/portfolio/masonary/gallery-itm-6.jpg" alt="">
+            </div>
+            <div class="img-slider-itm">
+              <img class="slider-img" src="./assets/media/portfolio/masonary/gallery-itm-7.jpg" alt="">
+            </div>
+            <div class="img-slider-itm">
+              <img class="slider-img" src="./assets/media/portfolio/masonary/gallery-itm-8.jpg" alt="">
+            </div>
+            <div class="img-slider-itm">
+              <img class="slider-img" src="./assets/media/portfolio/masonary/gallery-itm-9.jpg" alt="">
+            </div>
+            <div class="img-slider-itm">
+              <img class="slider-img" src="./assets/media/portfolio/masonary/gallery-itm-10.jpg" alt="">
+            </div>
+            <div class="img-slider-itm">
+              <img class="slider-img" src="./assets/media/portfolio/masonary/gallery-itm-11.jpg" alt="">
+            </div>
+            <div class="img-slider-itm">
+              <img class="slider-img" src="./assets/media/portfolio/masonary/gallery-itm-12.jpg" alt="">
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Image Slider section ends here -->
     </main>
 
     <!-- Footer -->
